package P7;

interface Observador {
    void actualizar(String condiciones);
}