@startuml

title __PRACTICA7's Class Diagram__\n

  namespace P7 {
    interface P7.Observador {
    }
  }
  

  namespace P7 {
    class P7.PantallaMeteorologica {
    }
  }
  

  namespace P7 {
    interface P7.Publisher {
    }
  }
  

  namespace P7 {
    class P7.SeleccionCiudad {
    }
  }
  

  namespace P7 {
    class P7.SujetoWeatherstack {
    }
  }
  

  namespace P7 {
    class P7.WeatherStackAPI {
    }
  }
  

  namespace P7 {
    class P7.WeatherstackExample {
    }
  }
  

  P7.PantallaMeteorologica .up.|> P7.Observador
  P7.SeleccionCiudad o-- P7.SujetoWeatherstack : sujeto
  P7.SeleccionCiudad o-- P7.WeatherStackAPI : weatherStackAPI
  P7.SujetoWeatherstack .up.|> P7.Publisher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
